# crypto_discord_bot

./: .env  Cargo.toml
src/: binance.rs  discord_bot.rs  main.rs
